Updated Header and Button Styling

--- a/src/CSS/Homepage.css
+++ b/src/CSS/Homepage.css
@@ -9,6 +9,8 @@
     width: 75vw;
     margin-top: 5%;
     background-color: #512888;
+    padding-top: 15px;
+    padding-bottom: 35px;
 }
 
 .lastButton {
