--- a/src/CSS/ReferenceBody.css
+++ b/src/CSS/ReferenceBody.css
@@ -1,9 +1,3 @@
-@media only screen and (min-device-width: 1000px) {
-    .referenceSize {
-        max-width: 1000px;
-        margin-left: 25%;
-        margin-right: 25%;
-        margin-top: 10px;
-        margin-bottom: 10px;
-    }
+.referenceBody {
+    margin: 2rem;
 }
