--- a/src/App.css
+++ b/src/App.css
@@ -1,16 +1,16 @@
 @media only screen and (min-device-width: 1000px) {
   .AppSize {
-    max-width: 1000px;
-    margin-right: 25%;
-    margin-left: 25%;
+    max-width: 1500px;
+    margin-right: auto;
+    margin-left: auto;
   }
 }
 
 .App {
   text-align: center;
-  max-width: 1000px;
-  margin-right: 25%;
-  margin-left: 25%;
+  max-width: 1500px;
+  margin-right: auto;
+  margin-left: auto;
 }
 
 .App-logo {
