--- a/src/CSS/KDAFooter.css
+++ b/src/CSS/KDAFooter.css
@@ -8,7 +8,8 @@
 }
 
 .navbarGradient{
-    background-image: linear-gradient(#7137bd, #4f2684);
+    border-top: 1px solid gray;
+    background-color: white;
 }
 
 .linkText{
