--- a/src/CSS/KDAFooter.css
+++ b/src/CSS/KDAFooter.css
@@ -11,8 +11,10 @@
     border-top: 1px solid gray;
     background-color: white;
     margin-bottom: auto;
+    width: 100%;
 }
 
 .linkText{
     text-decoration:none;
+    margin: 1em;
 }
