--- a/src/CSS/SearchResultsPage.css
+++ b/src/CSS/SearchResultsPage.css
@@ -4,4 +4,32 @@
 
 .resultItem{
     width: 100%;
+    padding: .5em;
+    margin: 0;
+}
+
+.resultsContainer {
+    padding: .5em;
+    width: 100%;
+}
+
+.resultsList {
+    padding: 0;
+    width: 100%;
+    overflow: scroll;
+    max-height: 500px;
+}
+
+.resultsTitle {
+    padding: .5em;
+    background-image: linear-gradient(#4f2684,#7137bd);
+}
+
+.divider{
+    width: 100%;
+    margin: 0;
+}
+
+.resultsTitleText{
+    color: white;
 }
